tests/ui/resolve/resolve-issue-135614-assoc-const.normal.stderr
error[E0658]: `use` associated items of traits is unstable
  --> $DIR/resolve-issue-135614-assoc-const.rs:6:5
   |
LL | use MyDefault::DEFAULT;
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #134691 <https://github.com/rust-lang/rust/issues/134691> for more information
   = help: add `#![feature(import_trait_associated_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
